2012-09-06  Iain Buclaw  <ibuclaw@ubuntu.com>

	* d-tree.def(UNSIGNED_RSHIFT_EXPR): Define new tree expression.
	(FLOAT_MOD_EXPR): Define new tree expression.
	* d-lang.cc(d_common_init_ts): New function.
	(d_write_global_declarations): Call check_global_declarations after
	finalize_compilation_unit.
	(d_gimplify_expr): Handle UNSIGNED_RSHIFT_EXPR, IASM_EXPR.
	* d-codegen.cc(IRState::arrayOpNotImplemented): New function.
	(IRState::buildOp): New function.
	(IRState::buildAssignOp): New function.
	* d-glue.cc(build_bool_binop): Remove function, mostly move to
	CmpExp::toElem.
	(build_math_op): Remove function, mostly move to IRState::buildOp.
	(build_assign_math_op): Remove function, mostly move to
	IRState::buildAssignOp.
	(BinExp::toElemBin): Remove function.
	(IdentityExp::toElem): Clean-up, use IRState::boolOp.
	(EqualExp::toElem): Likewise.
	(CmpExp::toElem): Likewise.
	(AndAndExp::toElem): Likewise.
	(OrOrExp::toElem): Likewise.
	(XorExp::toElem): Use IRState::arrayOpNotImplemented,
	IRState::buildOp.
	(OrExp::toElem): Likewise.
	(AndExp::toElem): Likewise.
	(UshrExp::toElem): Likewise.
	(ShrExp::toElem): Likewise.
	(ShlExp::toElem): Likewise.
	(ModExp::toElem): Likewise.
	(DivExp::toElem): Likewise.
	(MulExp::toElem): Likewise.
	(MinExp::toElem): Likewise.
	(AddExp::toElem): Likewise.
	(XorAssignExp::toElem): Use IRState::arrayOpNotImplemented,
	IRState::buildOp.
	(OrAssignExp::toElem): Likewise.
	(AndAssignExp::toElem): Likewise.
	(UshrAssignExp::toElem): Likewise.
	(ShrAssignExp::toElem): Likewise.
	(ShlAssignExp::toElem): Likewise.
	(ModAssignExp::toElem): Likewise.
	(DivAssignExp::toElem): Likewise.
	(MulAssignExp::toElem): Likewise.
	(PowAssignExp::toElem): Likewise.
	(MinAssignExp::toElem): Likewise.
	(AddAssignExp::toElem): Likewise.

	* d-codegen.cc(libcall_ids): Remove _adCmpChar.
	(IRState::getLibCallDecl): Remove LIBCALL_ADCMPCHAR.
	* d-glue.cc(CmpExp::toElem): Don't call LIBCALL_ADCMPCHAR.

	* lang.opt: Define Wcast-result.